# example-docker-python-uv

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-push-docker-image.yaml
