[project]
name = "example-docker-python-uv"
version = "0.1.0"
description = "Example of a Dockerized python application using uv to install python packages."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
]
